# glmines

./: CMakeLists.txt  LICENSE  README.md
data/shaders/: default.frag  default.vert
src/: CMakeLists.txt  definitions.h  glad.c  main.c
src/game/: border.c  border.h  cell.h  counter.c  counter.h  field.c  field.h  game.c  game.h  input.c  input.h  resources.c  resources.h  smile.c  smile.h  window.c  window.h
src/glad/: glad.h
src/graphics/: renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/math/: matrix4.c  matrix4.h  transform.c  transform.h  vector3.c  vector3.h
