cmake_minimum_required(VERSION 3.23)
project(glMines VERSION 1.0 LANGUAGES C)

# CPack
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/LICENSE)
set(CPACK_PACKAGE_VENDOR "adasdead")
set(CPACK_PACKAGE_EXECUTABLES "${PROJECT_NAME}" "${PROJECT_NAME}")
set(CPACK_CREATE_DESKTOP_LINKS ${PROJECT_NAME})
set(CPACK_NSIS_MODIFY_PATH "ON")

# Proj Folders
set(PROJECT_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(PROJECT_DATA_DIR ${PROJECT_SOURCE_DIR}/data)
set(PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)

# Other
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BIN_DIR})

if(UNIX)
    set(MATH_LIB m)
endif()

add_subdirectory(src)

include(CPack)